--- a/CODESOFT/TASK_1 PORTFOLIO/index.html
+++ b/CODESOFT/TASK_1 PORTFOLIO/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Athul's Portfolio</title>
+    <title>Abhijith's Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
             </ul>
         </nav>
         <div class="header-content">
-            <h1>Hi, I'm Athul</h1>
+            <h1>Hi, I'm E S Abhijith</h1>
             <p>Final Year Computer Science Student | MERN Stack Developer</p>
             <a href="#projects" class="btn">View My Work</a>
         </div>
@@ -34,17 +34,17 @@
             <div class="project">
                 <h3>TO DO</h3>
                 <p>A to do application with JavaScript.User can add delete tasks and it have nice user interface
-                    <br> <a href="to-do-woad-nine.vercel.app">TO-DO</a> </p>
+                    <br>  </p>
             </div>
             <div class="project">
                 <h3>CALCULATOR</h3>
                 <p>A calculator html css JavaScript.It has a nice interface ,where user can add ,substract,multiply.
-                    <a href="calculator-red-six.vercel.app">Calculator </a>
+                    
                 </p>
             </div>
             <div class="project">
                 <h3>NUMBER GURSSING GAME </h3>
-                <p>A number guessing game with html  css JavaScript.This project imptoved my Dom Manipulation skills in JavaScript. <a href="https://number-guessing-game-sand.vercel.app/">Number guessing game </a></p>
+                <p>A number guessing game with html  css JavaScript.This project imptoved my Dom Manipulation skills in JavaScript. </p>
             </div>
             <!-- Repeat the above block for more projects -->
         </div>
@@ -67,7 +67,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Athul. All rights reserved.</p>
+        <p>&copy; 2024 Abhijith. All rights reserved.</p>
     </footer>
 </body>
 </html>
